--- a/TRMS/pom.xml
+++ b/TRMS/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.revature.trms</groupId>
-  <artifactId>TRMS</artifactId>
+  <artifactId>MYTRMS</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  
   <dependencies>
 	<dependency>
     	<groupId>javax.servlet</groupId>
@@ -11,7 +12,17 @@
     	<version>2.5</version>
     	<scope>provided</scope>
 	</dependency>
+	
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20090211</version>
+	</dependency>
+
   </dependencies>
+  
+  
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
@@ -25,4 +36,6 @@
       </plugin>
     </plugins>
   </build>
+  
+  
 </project>
