--- a/TRMS/.classpath
+++ b/TRMS/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="main/webapp/" kind="src" output="target/classes" path="src">
+	<classpathentry excluding="main/webapp/|main/webapp/|main/webapp/|main/webapp/|main/webapp/" kind="src" output="target/classes" path="src">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -13,9 +13,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jars/servlet-api-2.5.jar"/>
-	<classpathentry kind="lib" path="jars/ojdbc7.jar"/>
-	<classpathentry kind="lib" path="jars/ojdbc14.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -26,5 +23,8 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="jars/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="jars/ojdbc7.jar"/>
+	<classpathentry kind="lib" path="jars/servlet-api-2.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
