ajax and json added on index.js

--- a/TRMS/pom.xml
+++ b/TRMS/pom.xml
@@ -11,7 +11,16 @@
     	<version>2.5</version>
     	<scope>provided</scope>
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+	<dependency>
+	    <groupId>org.json</groupId>
+	    <artifactId>json</artifactId>
+	    <version>20170516</version>
+	</dependency>
+
   </dependencies>
+  
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
