--- a/TRMS/.classpath
+++ b/TRMS/.classpath
@@ -31,6 +31,8 @@
 	<classpathentry kind="lib" path="src/main/resources/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="src/main/resources/ojdbc7.jar"/>
 	<classpathentry kind="lib" path="src/main/resources/servlet-api-2.5.jar"/>
+	<classpathentry kind="lib" path="json-20090211.jar"/>
+	<classpathentry kind="lib" path="jackson-databind-2.9.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
